season fix